src/snapshots/cornercase__ui__tests__issues__renders_the_tabs_toggles_and_issues.snap
---
source: src/ui.rs
expression: render(&with(issues(list(Some(0))))).backend()
---
" ▄▀▀▀ cornercase                                         │                                          "
" █┌ issues · shop ───────────────────────────────────────────────────────────────────────────────┐  "
"  │  All   GitHub   Shortcut   Linear                                    [ ] closed    [x] mine  │  "
"  │                                                                                              │  "
"  │ ›                                                                                            │  "
" p│                                                                                              │  "
"  │  #482   Returns page crashes on empty address                               bug · ana · 3d   │  "
"▌ │  sc-48  Dark mode                                                   In Review · luis · 2mo   │  "
"  │                                                                                              │  "
"  │                                                                                              │  "
"  │                                                                                              │  "
"  │                                                                                              │  "
"  │                                                                                              │  "
"  │                                                                                              │  "
" ─│ enter reads #482 · start works on it in its own worktree, on issue-482-returns               │  "
"  │                                                                              start   cancel  │  "
"  └──────────────────────────────────────────────────────────────────────────────────────────────┘  "
"  quit                         │                         │                                          "
